--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,5 +16,5 @@
     <color name="color_ffffff">#ffffff</color>
     <color name="color_fffbf3">#fffbf3</color>
     <color name="color_10000000">#10000000</color>
-
+    <color name="color_efeff4">#efeff4</color>
 </resources>
