--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,20 +3,26 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/transparent"
-    android:orientation="vertical" >
+    android:orientation="vertical">
 
     <net.lucode.hackware.magicindicator.MagicIndicator
         android:id="@+id/tab_indicator"
         android:layout_width="match_parent"
-        android:layout_gravity="center_vertical"
-        android:background="@color/color_f6f6f7"
+        android:layout_height="@dimen/dp_49"
         android:layout_alignParentBottom="true"
-        android:layout_height="@dimen/dp_49" />
+        android:layout_gravity="center_vertical"
+        android:background="@color/color_f6f6f7" />
+
 
     <android.support.v4.view.ViewPager
         android:id="@+id/view_pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@id/tab_indicator"/>
+        android:layout_above="@id/tab_indicator" />
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp_0.5"
+        android:layout_above="@+id/tab_indicator"
+        android:background="@color/color_cccccc" />
 </RelativeLayout>
