--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -44,5 +44,7 @@
     <dimen name="dp_37.5">37.5dp</dimen>
     <dimen name="dp_30">30dp</dimen>
     <dimen name="dp_35">35dp</dimen>
+    <dimen name="dp_87">87dp</dimen>
+    <dimen name="dp_7">7dp</dimen>
 
 </resources>
