--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -41,6 +41,14 @@
         <item name="android:background">@color/color_efeff4</item>
     </style>
 
+    <style name="margin_horizontal_line">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">@dimen/dp_0.5</item>
+        <item name="android:layout_marginLeft">@dimen/dp_15</item>
+        <item name="android:layout_marginRight">@dimen/dp_15</item>
+        <item name="android:background">@color/color_efeff4</item>
+    </style>
+
     <style name="horizontal_bold_line">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">@dimen/dp_10</item>
