--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -32,7 +32,7 @@
                 android:layout_height="@dimen/dp_140"
                 android:adjustViewBounds="true"
                 android:scaleType="centerCrop"
-                android:src="@drawable/ic_launcher" />
+                android:src="@drawable/login_bg" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -53,7 +53,7 @@
                         android:layout_marginLeft="@dimen/dp_22"
                         android:adjustViewBounds="true"
                         android:scaleType="centerInside"
-                        android:src="@drawable/ic_launcher" />
+                        android:src="@drawable/iphone" />
 
                     <EditText
                         android:id="@+id/et_phone"
@@ -88,7 +88,7 @@
                         android:layout_marginLeft="@dimen/dp_22"
                         android:adjustViewBounds="true"
                         android:scaleType="centerInside"
-                        android:src="@drawable/ic_launcher" />
+                        android:src="@drawable/yanzhengma" />
 
                     <TextView
                         android:id="@+id/tv_get_verify_code"
@@ -152,13 +152,14 @@
                         android:textColor="@color/color_cccccc"
                         android:textSize="@dimen/sp_14" />
 
-                    <ImageView
+                    <ImageButton
                         android:layout_width="@dimen/dp_60"
                         android:layout_height="@dimen/dp_60"
                         android:layout_marginTop="@dimen/dp_8"
                         android:adjustViewBounds="true"
                         android:scaleType="centerInside"
-                        android:src="@drawable/ic_launcher_round" />
+                        style="@style/repple_in_backguound"
+                        android:src="@drawable/wx_logo" />
                 </LinearLayout>
             </LinearLayout>
 
