--- a/app/src/main/res/layout/activity_my_classes.xml
+++ b/app/src/main/res/layout/activity_my_classes.xml
@@ -11,6 +11,7 @@
         <include layout="@layout/bar_tab" />
 
         <TextView
+            android:id="@+id/tv_add_class"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical|right"
