--- a/app/src/main/res/layout/bar_title.xml
+++ b/app/src/main/res/layout/bar_title.xml
@@ -10,9 +10,10 @@
         android:layout_height="match_parent"
         android:scaleType="centerInside"
         android:adjustViewBounds="true"
-        android:background="@android:color/transparent"
+        style="@style/repple_in_backguound"
         android:paddingBottom="@dimen/dp_11.5"
         android:paddingTop="@dimen/dp_11.5"
+        android:paddingRight="@dimen/dp_15"
         android:paddingLeft="@dimen/dp_15"/>
 
     <TextView
@@ -34,7 +35,7 @@
         android:layout_alignParentRight="true"
         android:scaleType="centerInside"
         android:adjustViewBounds="true"
-        android:background="@android:color/transparent"
+        style="@style/repple_in_backguound"
         android:paddingBottom="@dimen/dp_11.5"
         android:paddingTop="@dimen/dp_11.5"
         android:paddingLeft="@dimen/dp_15"
@@ -48,10 +49,11 @@
         android:layout_toLeftOf="@id/ib_right"
         android:scaleType="centerInside"
         android:adjustViewBounds="true"
-        android:background="@android:color/transparent"
+        style="@style/repple_in_backguound"
         android:paddingBottom="@dimen/dp_11.5"
         android:paddingTop="@dimen/dp_11.5"
         android:paddingLeft="@dimen/dp_15"
+        android:paddingRight="@dimen/dp_15"
         android:visibility="gone"/>
 
     <TextView
