--- a/app/src/main/res/layout/listview_item_class_list.xml
+++ b/app/src/main/res/layout/listview_item_class_list.xml
@@ -8,35 +8,8 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="单号：9016001"
-            android:textSize="@dimen/sp_14"
-            android:textColor="@color/color_666666"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:text="已付款"
-            android:textSize="@dimen/sp_14"
-            android:textColor="@color/color_666666"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:text="2017-06-29 22:14"
-            android:textSize="@dimen/sp_14"
-            android:textColor="@color/color_666666"/>
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/dp_15"
-        android:layout_marginTop="@dimen/dp_15">
+        android:layout_marginBottom="@dimen/dp_15">
         <TextView
             android:id="@+id/tv_count"
             android:layout_width="wrap_content"
@@ -69,7 +42,7 @@
             android:layout_centerVertical="true"
             android:layout_marginLeft="@dimen/dp_5"
             android:layout_alignParentRight="true"
-            android:text="9.9"
+            android:text="@string/rmb"
             android:textSize="@dimen/sp_16"
             android:textColor="@color/color_000000"/>
         <TextView
@@ -78,30 +51,46 @@
             android:layout_centerVertical="true"
             android:layout_alignParentLeft="true"
             android:layout_toLeftOf="@id/tv_price"
-            android:text="蒋先明"
+            android:text="阳光一对一（线下） | 已审核 | 已上架"
             android:textSize="@dimen/sp_14"
             android:textColor="@color/color_666666"/>
     </RelativeLayout>
 
     <View style="@style/horizontal_line" />
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="right"
         android:layout_marginTop="@dimen/dp_10">
+
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:minHeight="0dp"
             android:minWidth="0dp"
-            android:layout_alignParentRight="true"
             android:background="@drawable/selector_btn_bg_lesser_corners"
             android:textColor="@drawable/selector_text_color_lesser_btn"
             android:textSize="@dimen/sp_14"
-            android:text="取消安排"
+            android:text="删除"
             android:paddingTop="@dimen/dp_8"
             android:paddingBottom="@dimen/dp_8"
-            android:paddingLeft="@dimen/dp_10"
-            android:paddingRight="@dimen/dp_10"/>
-    </RelativeLayout>
+            android:paddingLeft="@dimen/dp_20"
+            android:paddingRight="@dimen/dp_20"/>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:minHeight="0dp"
+            android:minWidth="0dp"
+            android:layout_marginLeft="@dimen/dp_15"
+            android:background="@drawable/selector_btn_bg_lesser_corners"
+            android:textColor="@drawable/selector_text_color_lesser_btn"
+            android:textSize="@dimen/sp_14"
+            android:text="下架"
+            android:paddingTop="@dimen/dp_8"
+            android:paddingBottom="@dimen/dp_8"
+            android:paddingLeft="@dimen/dp_20"
+            android:paddingRight="@dimen/dp_20"/>
+    </LinearLayout>
 </LinearLayout>
