--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -12,7 +12,7 @@
         <item>我收到的订单</item>
     </array>
 
-    <array name="classes">
+    <array name="classes_tab">
         <item>所有授课</item>
         <item>上架的授课</item>
     </array>
