--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,6 +9,7 @@
     <dimen name="sp_18">18sp</dimen>
     
     <dimen name="dp_12">12dp</dimen>
+    <dimen name="dp_14">14dp</dimen>
     <dimen name="dp_19">19dp</dimen>
     <dimen name="dp_21">21dp</dimen>
     <dimen name="dp_16">16dp</dimen>
@@ -23,9 +24,12 @@
     <dimen name="dp_70">70dp</dimen>
     <dimen name="dp_5">5dp</dimen>
     <dimen name="dp_20">20dp</dimen>
+    <dimen name="dp_27">27dp</dimen>
+    <dimen name="dp_50">50dp</dimen>
     <dimen name="dp_51">51dp</dimen>
     <dimen name="dp_55">55dp</dimen>
     <dimen name="dp_60">60dp</dimen>
+    <dimen name="dp_6">6dp</dimen>
     <dimen name="dp_63">63dp</dimen>
     <dimen name="dp_75">75dp</dimen>
     <dimen name="dp_84">84dp</dimen>
@@ -49,5 +53,6 @@
     <dimen name="dp_87">87dp</dimen>
     <dimen name="dp_7">7dp</dimen>
     <dimen name="dp_240">240dp</dimen>
+    <dimen name="dp_2">2dp</dimen>
 
 </resources>
