--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,7 +4,34 @@
         <item name="colorPrimary">@color/color_f6f6f7</item>
         <item name="colorPrimaryDark">@color/color_f6f6f7</item>
         <item name="colorAccent">@color/color_ffb900</item>
+        <item name="android:windowContentOverlay">@null</item>
         <item name="android:screenOrientation">portrait</item>
+        <item name="android:windowAnimationStyle">@style/activityAnimation</item>
+    </style>
+
+    <!-- activity animation 样式 -->
+    <style name="activityAnimation" parent="@android:style/Animation">
+        <item name="android:activityOpenEnterAnimation">@anim/slide_in_right</item>
+        <item name="android:activityOpenExitAnimation">@anim/slide_out_left</item>
+        <item name="android:activityCloseEnterAnimation">@anim/slide_in_left</item>
+        <item name="android:activityCloseExitAnimation">@anim/fade_out</item>
+    </style>
+
+    <!-- 启动样式 -->
+    <style name="Theme.Start" parent="AppTheme">
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:colorBackgroundCacheHint">@null</item>
+    </style>
+
+    <!--边界内点击水波纹-->
+    <style name="repple_in_backguound">
+        <item name="android:background">?android:attr/selectableItemBackground</item>
+    </style>
+
+    <!--边界外点击水波纹-->
+    <style name="repple_out_backguound">
+        <item name="android:background">?android:attr/actionBarItemBackground</item>
     </style>
 
     <style name="important_corners_btn">
