--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -3,7 +3,7 @@
     android:layout_height="match_parent">
 
     <RelativeLayout
-        android:id="@+id/layout_update_info"
+        android:id="@+id/layout_update_role"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_49"
         android:background="@color/color_ffb900"
@@ -39,7 +39,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="升级您的省份，享受更多专业服务"
+            android:text="升级您的身份，享受更多专业服务"
             android:textColor="@color/color_333333"
             android:layout_centerVertical="true"
             android:textSize="@dimen/sp_14"
@@ -53,7 +53,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fitsSystemWindows="true"
-        android:layout_above="@id/layout_update_info"
+        android:layout_above="@id/layout_update_role"
         android:scrollbars="none">
 
         <LinearLayout
