--- a/app/src/main/res/layout/tab_item_main_indicator.xml
+++ b/app/src/main/res/layout/tab_item_main_indicator.xml
@@ -6,11 +6,12 @@
     style="@style/repple_in_backguound"
     android:orientation="vertical">
 
-    <ImageButton
-        android:id="@+id/ib_tab_image"
+    <ImageView
+        android:id="@+id/iv_tab"
         android:layout_width="@dimen/dp_21"
         android:layout_height="@dimen/dp_21"
         android:background="@android:color/transparent"
+        android:adjustViewBounds="true"
         android:scaleType="centerInside"/>
 
     <TextView
