--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -31,6 +31,7 @@
     <dimen name="dp_60">60dp</dimen>
     <dimen name="dp_6">6dp</dimen>
     <dimen name="dp_63">63dp</dimen>
+    <dimen name="dp_64">64dp</dimen>
     <dimen name="dp_75">75dp</dimen>
     <dimen name="dp_84">84dp</dimen>
     <dimen name="dp_160">160dp</dimen>
@@ -47,6 +48,7 @@
     <dimen name="dp_162">162dp</dimen>
     <dimen name="dp_22">22dp</dimen>
     <dimen name="dp_25">25dp</dimen>
+    <dimen name="dp_24">24dp</dimen>
     <dimen name="dp_37.5">37.5dp</dimen>
     <dimen name="dp_30">30dp</dimen>
     <dimen name="dp_35">35dp</dimen>
