--- a/app/src/main/res/layout/bar_title.xml
+++ b/app/src/main/res/layout/bar_title.xml
@@ -28,6 +28,19 @@
         android:visibility="gone"
         android:layout_toRightOf="@+id/ib_left"/>
 
+    <TextView
+        android:id="@+id/tv_right"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_alignParentRight="true"
+        style="@style/repple_in_backguound"
+        android:gravity="center"
+        android:paddingBottom="@dimen/dp_11.5"
+        android:paddingTop="@dimen/dp_11.5"
+        android:paddingLeft="@dimen/dp_15"
+        android:paddingRight="@dimen/dp_15"
+        android:visibility="gone"/>
+
     <ImageButton
         android:id="@+id/ib_right"
         android:layout_width="wrap_content"
