--- a/app/src/main/res/layout/listview_item_found.xml
+++ b/app/src/main/res/layout/listview_item_found.xml
@@ -31,24 +31,43 @@
                 android:layout_marginLeft="@dimen/dp_10"
                 android:orientation="vertical">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/dp_4"
-                    android:text="这里是用户名字"
-                    android:singleLine="true"
-                    android:ellipsize="end"
-                    android:textColor="@color/color_333333"
-                    android:textSize="@dimen/dp_15" />
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="@dimen/dp_4"
-                    android:layout_alignParentBottom="true"
-                    android:text="这里是用户名字"
-                    android:textColor="@color/color_999999"
-                    android:textSize="@dimen/sp_12" />
+                <ImageView
+                    android:id="@+id/iv_right"
+                    android:layout_width="@dimen/dp_22"
+                    android:layout_height="@dimen/dp_22"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:adjustViewBounds="true"
+                    android:scaleType="centerInside"
+                    android:src="@drawable/ic_launcher" />
+
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginRight="@dimen/dp_5"
+                    android:layout_toLeftOf="@id/iv_right">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/dp_4"
+                        android:ellipsize="end"
+                        android:singleLine="true"
+                        android:text="这里是用户名字"
+                        android:textColor="@color/color_333333"
+                        android:textSize="@dimen/dp_15" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentBottom="true"
+                        android:layout_marginBottom="@dimen/dp_4"
+                        android:text="这里是用户名字"
+                        android:textColor="@color/color_999999"
+                        android:textSize="@dimen/sp_12" />
+                </RelativeLayout>
             </RelativeLayout>
         </LinearLayout>
 
@@ -64,8 +83,8 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="@dimen/dp_120"
-            android:src="@drawable/none"
-            android:scaleType="centerCrop"/>
+            android:scaleType="centerCrop"
+            android:src="@drawable/none" />
 
         <TextView
             android:id="@+id/textView"
@@ -78,79 +97,7 @@
             android:textSize="@dimen/sp_12" />
     </LinearLayout>
 
-    <View
-        style="@style/horizontal_line" />
-    
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/dp_49">
+    <View style="@style/horizontal_line" />
 
-        <LinearLayout
-            android:id="@+id/layout_share"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="match_parent"
-            android:gravity="center">
-            <ImageView
-                android:layout_width="@dimen/dp_22"
-                android:layout_height="@dimen/dp_22"
-                android:src="@drawable/ic_launcher"
-                android:adjustViewBounds="true"
-                android:scaleType="centerInside"
-                android:layout_marginRight="@dimen/dp_10"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="49"
-                android:textSize="@dimen/sp_14"
-                android:textColor="@color/color_666666"/>
-        </LinearLayout>
-
-        <View
-            style="@style/vertical_line" />
-
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="match_parent"
-            android:gravity="center">
-            <ImageView
-                android:layout_width="@dimen/dp_22"
-                android:layout_height="@dimen/dp_22"
-                android:src="@drawable/ic_launcher"
-                android:adjustViewBounds="true"
-                android:scaleType="centerInside"
-                android:layout_marginRight="@dimen/dp_10"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="49"
-                android:textSize="@dimen/sp_14"
-                android:textColor="@color/color_666666"/>
-        </LinearLayout>
-
-        <View
-           style="@style/vertical_line" />
-
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="match_parent"
-            android:gravity="center">
-            <ImageView
-                android:layout_width="@dimen/dp_22"
-                android:layout_height="@dimen/dp_22"
-                android:src="@drawable/ic_launcher"
-                android:adjustViewBounds="true"
-                android:scaleType="centerInside"
-                android:layout_marginRight="@dimen/dp_10"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="49"
-                android:textSize="@dimen/sp_14"
-                android:textColor="@color/color_666666"/>
-        </LinearLayout>
-
-    </LinearLayout>
+    <include layout="@layout/layout_found_item_bottom" />
 </LinearLayout>
