--- a/app/src/main/res/layout/fragment_tecaher.xml
+++ b/app/src/main/res/layout/fragment_tecaher.xml
@@ -1,10 +1,80 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
+    <RelativeLayout
+        android:id="@+id/layout_tab"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp_49"
+        android:background="@color/color_ffb900">
+        <TextView
+            android:id="@+id/ib_left"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            style="@style/repple_in_backguound"
+            android:gravity="center"
+            android:textColor="@color/color_333333"
+            android:textSize="@dimen/sp_16"
+            android:ellipsize="end"
+            android:text="导师"
+            android:singleLine="true"
+            android:paddingBottom="@dimen/dp_11.5"
+            android:paddingTop="@dimen/dp_11.5"
+            android:paddingLeft="@dimen/dp_15"
+            android:paddingRight="@dimen/dp_30"/>
+
+        <TextView
+            android:id="@+id/tv_right"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:textColor="@color/color_333333"
+            android:textSize="@dimen/sp_16"
+            android:ellipsize="end"
+            android:text="我的授课"
+            android:singleLine="true"
+            android:paddingRight="@dimen/dp_15"
+            android:paddingLeft="@dimen/dp_15"
+            style="@style/repple_in_backguound"
+            android:layout_alignParentRight="true"/>
+
+        <RelativeLayout
+            android:id="@+id/layout_search"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp_31"
+            android:layout_centerVertical="true"
+            android:gravity="center_vertical"
+            android:background="@drawable/shape_bg_corners_tab_search"
+            android:layout_toRightOf="@id/ib_left"
+            android:layout_toLeftOf="@id/tv_right">
+
+            <ImageView
+                android:id="@+id/iv_tab_search"
+                android:layout_width="@dimen/dp_22"
+                android:layout_height="@dimen/dp_22"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="@dimen/dp_10"
+                android:layout_centerVertical="true"
+                android:src="@drawable/sousuo"
+                android:adjustViewBounds="true"
+                android:scaleType="centerInside"/>
+            <TextView
+                android:id="@+id/tv_search"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/dp_10"
+                android:textColor="@color/color_999999"
+                android:layout_centerVertical="true"
+                android:gravity="center"
+                android:textSize="@dimen/sp_16"
+                android:text="搜索导师或课程"/>
+
+        </RelativeLayout>
+    </RelativeLayout>
+
+    <include layout="@layout/layout_pull_listview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="导师" />
+        android:layout_below="@id/layout_tab"/>
 
-</FrameLayout>
+</RelativeLayout>
