--- a/app/src/main/res/layout/layout_pull_listview.xml
+++ b/app/src/main/res/layout/layout_pull_listview.xml
@@ -4,7 +4,7 @@
     xmlns:cube_ptr="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#f0f0f0"
+    android:background="@android:color/white"
     cube_ptr:ptr_duration_to_close="200"
     cube_ptr:ptr_duration_to_close_header="700"
     cube_ptr:ptr_keep_header_when_refresh="true"
