--- a/app/src/main/res/layout/layout_tab_home_bar.xml
+++ b/app/src/main/res/layout/layout_tab_home_bar.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/layout_home_bar"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/dp_49"
-    android:background="@color/color_ffb900">
+    android:layout_height="@dimen/dp_49">
 
     <ImageButton
         android:id="@+id/ib_scan"
