--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -114,12 +114,21 @@
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/dp_120" />
 
-                <net.lucode.hackware.magicindicator.MagicIndicator
+               <!-- <net.lucode.hackware.magicindicator.MagicIndicator
                     android:id="@+id/home_indicator"
                     android:layout_width="wrap_content"
                     android:layout_height="@dimen/dp_5"
                     android:layout_gravity="center_horizontal|bottom"
-                    android:layout_marginBottom="@dimen/dp_16" />
+                    android:layout_marginBottom="@dimen/dp_16" />-->
+
+                <LinearLayout
+                    android:id="@+id/home_indicator"
+                    android:orientation="horizontal"
+                    android:layout_width="wrap_content"
+                    android:gravity="center"
+                    android:layout_marginBottom="@dimen/dp_16"
+                    android:layout_gravity="center_horizontal|bottom"
+                    android:layout_height="wrap_content"/>
 
             </FrameLayout>
 
