--- a/app/src/main/res/layout/fragment_my.xml
+++ b/app/src/main/res/layout/fragment_my.xml
@@ -153,16 +153,15 @@
                 </LinearLayout>
             </LinearLayout>
 
-            <com.itheima.roundedimageview.RoundedImageView
+            <com.mango.ui.widget.RoundImageView
                 xmlns:round="http://schemas.android.com/apk/res-auto"
-                round:riv_oval="true"
-                round:riv_border_width="@dimen/dp_2"
-                round:riv_border_color="@android:color/white"
+                round:border_overlay="true"
+                round:border_width="@dimen/dp_2"
+                round:border_color="@android:color/white"
                 android:layout_width="@dimen/dp_84"
                 android:layout_height="@dimen/dp_84"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="@dimen/dp_7"
-                android:adjustViewBounds="true"
                 android:src="@drawable/none"/>
 
             <!--<ImageView
