--- a/app/src/main/res/layout/listview_item_found.xml
+++ b/app/src/main/res/layout/listview_item_found.xml
@@ -18,12 +18,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <com.itheima.roundedimageview.RoundedImageView xmlns:round="http://schemas.android.com/apk/res-auto"
+            <com.mango.ui.widget.RoundImageView
+                android:id="@+id/iv_publisher_avatar"
                 android:layout_width="@dimen/dp_49"
                 android:layout_height="@dimen/dp_49"
-                android:adjustViewBounds="true"
-                android:src="@drawable/none"
-                round:riv_oval="true" />
+                android:scaleType="centerCrop"
+                android:src="@drawable/none" />
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -50,6 +50,7 @@
                     android:layout_toLeftOf="@id/iv_right">
 
                     <TextView
+                        android:id="@+id/tv_publisher_name"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/dp_4"
@@ -60,6 +61,7 @@
                         android:textSize="@dimen/dp_15" />
 
                     <TextView
+                        android:id="@+id/tv_publish_time_labe"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentBottom="true"
