--- a/app/src/main/res/layout/listview_item_interact_area.xml
+++ b/app/src/main/res/layout/listview_item_interact_area.xml
@@ -9,12 +9,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <com.itheima.roundedimageview.RoundedImageView xmlns:round="http://schemas.android.com/apk/res-auto"
+        <com.mango.ui.widget.RoundImageView xmlns:round="http://schemas.android.com/apk/res-auto"
             android:layout_width="@dimen/dp_49"
             android:layout_height="@dimen/dp_49"
-            android:adjustViewBounds="true"
-            android:src="@drawable/none"
-            round:riv_oval="true" />
+            android:src="@drawable/none" />
 
         <RelativeLayout
             android:layout_width="match_parent"
