--- a/app/src/main/res/layout/listview_item_recommend_teacher_class.xml
+++ b/app/src/main/res/layout/listview_item_recommend_teacher_class.xml
@@ -5,13 +5,11 @@
     android:padding="@dimen/dp_15">
 
 
-    <com.itheima.roundedimageview.RoundedImageView xmlns:round="http://schemas.android.com/apk/res-auto"
+    <com.mango.ui.widget.RoundImageView
         android:id="@+id/iv_avatar"
         android:layout_width="@dimen/dp_70"
         android:layout_height="@dimen/dp_70"
-        android:adjustViewBounds="true"
-        android:src="@drawable/none"
-        round:riv_oval="true" />
+        android:src="@drawable/none" />
 
     <LinearLayout
         android:layout_width="match_parent"
